--- a/public/css/slidebar.css
+++ b/public/css/slidebar.css
@@ -1,27 +1,10 @@
-header{
+section{
     background: #283342;
     width: 256px;
-    height: 100vh;
+    height: 92vh;
 }
 
-.container-logo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 256px;
-    height: 60px;
-    flex-shrink: 0;
-    background: #1D242E;
-    padding-left: 0%;
-}
-.title-logo{
-    color: #FFF;
-    font-family: "Poppins";
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 24px;
-}
+
 
 .container-profile{
     display: flex;
